--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ action="action_page.php">
 class="close" title="Close Modal">
     &times;</span>
 
- <img src="img_profile.png"
+ <img src="FB_IMG_16047170291064310.jpg"
  alt="Avatar"
  class="avatar">
     </div>
